<resources>
    <string name="app_name">AFF E-Ticket</string>
    <string name="check_your_bank_activities">Check your bank activities</string>
    <string name="check_your_links">Check your links</string>
    <string name="check_your_connection">Check your connection</string>
    <string name="add_new_bill_to_pay">Add new bill to pay</string>
    <string name="check_your_ideas">Check your ideas</string>

    <string name="connection">Connection</string>
    <string name="links">Links</string>
    <string name="add">Add</string>
    <string name="ideas">Ideas</string>
    <string name="banking">Banking</string>
</resources>
