<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".dashboard">

    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/bankCard"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_margin="@dimen/medium_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:background="@drawable/cerclebackgroundpurple"
                    android:src="@drawable/ic_attach_money_black_24dp"
                    android:padding="@dimen/medium_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/banking"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="@dimen/medium_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/check_your_bank_activities"
                    android:padding="@dimen/small_padding"
                    android:textColor="@android:color/darker_gray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/ideaCard"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_margin="@dimen/medium_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:background="@drawable/cerclebackgroundpink"
                    android:src="@drawable/ic_lightbulb_outline_black_24dp"
                    android:padding="@dimen/medium_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/ideas"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="@dimen/medium_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/check_your_ideas"
                    android:padding="@dimen/small_padding"
                    android:textColor="@android:color/darker_gray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/addCard"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_margin="@dimen/medium_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:background="@drawable/cerclebackgroundgreen"
                    android:src="@drawable/ic_control_point_black_24dp"
                    android:padding="@dimen/medium_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/add"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="@dimen/medium_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add_new_bill_to_pay"
                    android:padding="@dimen/small_padding"
                    android:textColor="@android:color/darker_gray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/linkCard"
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_margin="@dimen/medium_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:background="@drawable/cerclebackgroundyello"
                    android:padding="@dimen/medium_margin"
                    android:src="@drawable/ic_attach_file_black_24dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/links"
                    android:textStyle="bold" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/lightgray" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/small_padding"
                    android:text="@string/check_your_links"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/connectionCard"
            android:layout_width="@dimen/card_width_large"
            android:layout_height="@dimen/card_height_small"
            android:layout_margin="@dimen/medium_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:background="@drawable/cerclebackgroundpurple"
                    android:src="@drawable/ic_wifi_black_24dp"
                    android:padding="@dimen/medium_padding"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/connection"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/check_your_connection"
                    android:padding="@dimen/small_padding"
                    android:textColor="@android:color/darker_gray"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


</LinearLayout>